apps/internal/media/readarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: readarr
  namespace: svc-media
  labels:
    app: readarr
spec:
  type: ClusterIP
  selector:
    app: readarr
  ports:
    - name: http
      port: 8787
      targetPort: http
