apps/internal/media/readarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: readarr
  namespace: svc-media
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-dns"
spec:
  ingressClassName: nginx-internal
  rules:
    - host: readarr.intern.rohrbom.be
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: readarr
                port:
                  number: 8787
  tls:
    - hosts:
        - readarr.intern.rohrbom.be
      secretName: readarr-tls
